SHOR-149: Fix gaps between form items

--- a/scss/civicrm/common/_forms.scss
+++ b/scss/civicrm/common/_forms.scss
@@ -339,3 +339,7 @@ input.error {
     @include block-form();
   }
 }
+
+.crm-container > .crm-section.form-item {
+  margin-bottom: $crm-gap-medium;
+}
